added updated resume and updated portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Portfolio</title>
+    <title>Elham's Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link
@@ -80,14 +80,11 @@
           </div>
           <div class="col-md-8">
             <p>
-              Hey there! My name is Elham and I am an ambitious and driven
-              second-year Computer Science student at University of Toronto’s
-              Co-op program with a passion for developing software and learning
-              In the past I've worked on many different personal projects,
-              school projects, and have attended hackathons where I learned and
-              improved my technical skills. Now I am looking to gain industry
-              experience and am seeking a Software Engineering/Development
-              position for winter 2022.
+              Hey there! My name is Elham and I am an ambitious and driven second-year Computer Science student at the University of Toronto’s Co-op program with a passion for developing software and learning. In the past, I've worked on many different personal projects, school projects, and hackathons where I learned and improved my technical skills. In addition to this, I have gained valuable industry experience working as a Software Developer and Analyst. 
+              <br />
+              <br />
+              Now I am looking to gain even more experience in the field of software development through internships/co-ops for Fall 2022. If you are looking for someone with great problem-solving skills who is motivated to learn new things quickly then please don't hesitate to reach out!
+
             </p>
           </div>
         </div>
@@ -97,6 +94,24 @@
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience & Leadership</h2>
       <div id="experience-timeline">
+        <div data-date="January 2022 – May 2022">
+          <h3>Sunnybrook Health and Sciences Centre</h3>
+          <h4>Software Developer and Analyst</h4>
+          <p>
+            Developed new features and fixed bugs for the CrowdEEG platform, (<a href="https://github.com/OSHS2019/platform/tree/amplitude_menu_fixes">code</a>) a
+            tool which allows medical experts to annotate and analyze medical time series data with JavaScript, jQuery, Meteor and MongoDB.
+            Refactored the amplitude adjustment feature entirely, implementing custom scaling, scaling a single channel to screen, scaling all channels to screen,
+            and ultimately increasing speeds by 300%.
+            <br />
+            <br />
+            Created a menu where all these features are located, implementing options to move channels up and down, as well as reversing the polarity of channels.
+            Refactored various annotation features and significantly improved upon them, including: change point annotations, sleep stage annotations, and adding specific labels to these annotations.
+            <br />
+            <br />
+            Worked with an apache server to deploy changes
+          </p>
+        </div>
+
         <div data-date="November 2014 – March 2020">
           <h3>World Master Taekwondo Academy</h3>
           <h4>Taekwondo Instructor</h4>
@@ -168,7 +183,10 @@
                 Developed a clinic scheduler Android application using Java and
                 Android Studio following a Scrum process. Created Doctor, User,
                 Patient, Appointment classes and worked on first version of the
-                dashboard. Implemented first version of the Model-View-Presenter
+                dashboard. 
+                <br />
+                <br />
+                Implemented first version of the Model-View-Presenter
                 Model. The application stores users, patients, and appointments
                 in a Firebase Realtime Database. The application has features
                 such as the creating an account as a doctor or patient, viewing
@@ -323,6 +341,7 @@ strong problem-solving skills which received extremely positive feedback. Collab
         <li>Redux</li>
         <li>Flask</li>
         <li>MongoDB</li>
+        <li>mySQL</li>
         <li>HTML5</li>
         <li>CSS3</li>
         <li>Firebase Realtime Database</li>
@@ -337,6 +356,7 @@ strong problem-solving skills which received extremely positive feedback. Collab
         <li>Problem-Solving</li>
         <li>Leadership</li>
         <li>Agile Methodologies</li>
+        
     </ul>
     </div>
     <!-- End #skills -->
