updated resume and experience section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <br />
             <br />
             Created a menu where all these features are located, implementing options to move channels up and down, as well as reversing the polarity of channels.
-            Refactored various annotation features and significantly improved upon them, including: change point annotations, sleep stage annotations, and adding specific labels to these annotations.
+            Refactored various annotation features and significantly improved upon them, including: change point annotations, sleep stage annotations, adding specific labels to these annotations, allowing channels displayed to be selected, and improving the crosshair alignment feautre.
             <br />
             <br />
             Worked with an apache server to deploy changes
