--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="scss/bootstrap.min.css" rel="stylesheet" />
+    <link href="scss/styles.css" rel="stylesheet" />
   </head>
 
   <body>
